--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         </h1>
     </header>
     <main>
+        <picture>
+            <source media="(min-width:650px)" srcset="./asset/cover.svg">
+            <source media="(min-width:465px)" srcset="./asset/cover.svg">
+            <img src="./asset/cover.svg" alt="Cover">
+        </picture>
 
         <article>
             <h2>Description</h2>
