--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1 lang="en">
-            javascript developer
+            <span aria-hidden="true">🕹️</span>javascript developer
         </h1>
     </header>
     <main>
