--- a/index.html
+++ b/index.html
@@ -19,31 +19,16 @@
     </header>
     <main>
         <!-- exception qui confirme la règle -->
-        <div>
+        <div role="region" class="gallery-content">
+            
             <!-- source pour les image -->
-            <img
-            loading="lazy"
-            src="https://www.pokepedia.fr/images/2/2c/Damien-ROSA.png"
-            alt="Damien"
-            >
-
-            <img
-            loading="lazy"
-            src="https://www.pokepedia.fr/images/f/fc/Spectra-ROSA.png"
-            alt="Spectra"
-            >
-
-            <img
-            loading="lazy"
-            src="https://www.pokepedia.fr/images/7/75/Glacia-ROSA.png"
-            alt="Glacia"
-          >
-
-          <img
-          loading="lazy"
-          src="https://www.pokepedia.fr/images/f/f9/Aragon-ROSA.png"
-          alt="Aragon"
-        />
+                <ul class="gallery-grid">
+                    <li><img loading="lazy" src="https://www.pokepedia.fr/images/2/2c/Damien-ROSA.png" alt="Damien"></li>
+                    <li><img loading="lazy" src="https://www.pokepedia.fr/images/f/fc/Spectra-ROSA.png" alt="Spectra"></li>
+                    <li><img loading="lazy" src="https://www.pokepedia.fr/images/7/75/Glacia-ROSA.png" alt="Glacia"></li>
+                    <li><img loading="lazy" src="https://www.pokepedia.fr/images/f/f9/Aragon-ROSA.png" alt="Aragon"></li>
+                </ul>
+            
         </div>
 
         <picture>
@@ -62,7 +47,8 @@
                 <summary>
                     <h3>
                         <img src="./asset/icons8-github.svg" alt="icone">
-                        Liste des langages</h3>
+                        Liste des langages
+                    </h3>
                 </summary>
                 <ul>
                     <li><strong>html</strong></li>
