--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
         </div>
 
-        <picture>
+        <picture class="">
           <source media="(min-width:65rem)" srcset="./asset/cover.svg">
             <source media="(min-width:46.5rem)" srcset="./asset/cover.svg"> 
             <img src="./asset/cover.svg" alt="Cover">
