--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <details>
                 <summary>
                     <h3>
-                        <img src="./asset/icons8-github.svg" alt="icone">
-                        Liste des langages
+                        ​Liste des langages
                     </h3>
                 </summary>
                 <ul>
