--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
         </div>
 
-        <picture class="">
+        <picture class="image">
           <source media="(min-width:65rem)" srcset="./asset/cover.svg">
             <source media="(min-width:46.5rem)" srcset="./asset/cover.svg"> 
             <img src="./asset/cover.svg" alt="Cover">
