--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul lang="en">
                     <li><a href="#">home</a></li>
-                    <li><a href="#">project</a></li>
+                    <li><a href="#project">project</a></li>
                     <li><a href="#">about</a></li>
                 </ul>
             </nav>
@@ -45,7 +45,7 @@
             <img src="./asset/cover.svg" alt="Cover">
         </picture> 
 
-        <article>
+        <article id="project">
             
             <h2> 
                 Description du projet
