--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
             <h1 lang="en">
-                <span aria-hidden="true">🕹️</span>javascript developer and
+                <span aria-hidden="true">🕹️</span>javascript developer
             </h1>
             <nav>
                 <ul lang="en">
